# LithoUI

./: .gitignore  CMakeLists.txt  README.md
apps/hello_litho/: CMakeLists.txt  main.cpp
core/: dirty_list.hpp  litho_core.h  painter.hpp  pfb.hpp  region.hpp  tile.hpp
framework/activity/: activity_manager.hpp
framework/animation/: value_animator.hpp
framework/base/: object.hpp
framework/event/: event_types.hpp
framework/intent/: bundle.cpp  bundle.hpp
framework/view/: view.cpp  view.hpp  view_group.hpp
framework/widget/: image_view.hpp
framework/window/: window.hpp  window_manager.hpp
port/: display_adapter.hpp  tick_adapter.hpp
port/gdi/: gdi_display.hpp  gdi_input.hpp  gdi_tick.hpp
port/x11/: x11_display.hpp  x11_input.hpp  x11_tick.hpp
tests/: demo_render.cpp  viz_clock.cpp  viz_clockapp.cpp  viz_dump.cpp  viz_rotate.cpp  viz_spin.cpp  viz_uniform.cpp
tests/unit/: CMakeLists.txt  test_dirty_list.cpp  test_main.cpp  test_painter.cpp  test_pfb.cpp  test_region.cpp  test_rotate.cpp  test_runner.hpp
tools/: pack_res.py  spin_report.py
